--- a/public/css/login.css
+++ b/public/css/login.css
@@ -7,7 +7,8 @@
   
       body {
         font-family: 'Nunito', sans-serif;
-        background: radial-gradient(circle,#535C49,#9EB69B,#CFC3AD, #A8C9AB,#90A489 ,#B69B87); /* Light beige to off-white */
+        background: linear-gradient(to bottom right, #F5F5DC, #FAF9F6);
+        /* background: radial-gradient(circle,#535C49,#9EB69B,#CFC3AD, #A8C9AB,#90A489 ,#B69B87); Light beige to off-white */
         display: flex;
         justify-content: center;
         align-items: center;
@@ -20,12 +21,17 @@
         /*background: #f0f0f0;*/ /*lightgray*/
         /*background: linear-gradient(to bottom, #F2F2F2, #FFFFFF); /* Light gray to white */
         /*background: linear-gradient(to bottom right, #F5F5F5, #FFFFFF); /* Light gray to white */
+        animation: fadeIn 1s ease-in-out forwards;
         background: linear-gradient(to bottom right, #F5F5DC, #FAF9F6); /* Light beige to off-white */
         padding: 2rem;
         border-radius: 12px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         width: 100%;
         max-width: 400px;
+        /* height: -webkit-fill-available; */
+        /* width: -webkit-fill-available; */
+        margin-top: 20;
+        align-content: center;
       }
   
       /*.login-container:hover {*/
@@ -104,8 +110,17 @@
         text-decoration: underline;
       }
   
+      @keyframes fadeIn {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+      }
       @media (max-width: 480px) {
         .login-container {
+          height: 100vh;
           padding: 1.5rem;
         }
       }
