bg change of visualizer

--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -172,6 +172,6 @@
         canvas {
             width: 100vw;
             height: 200px;
-            border: 2px solid white;
+            /* border: 2px solid white; */
             background: black;
         }
