--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -173,5 +173,25 @@
             width: 100vw;
             height: 200px;
             /* border: 2px solid white; */
-            background: black;
+            /* background: black; */
         }
+
+        .ripple {
+            position:fixed;
+            width: 15px;
+            height: 15px;
+            background: #90A489;
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            pointer-events: none;
+        }
+        
+        /* #waveform2 {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100px;
+            background: #90A489;
+            z-index: 1;
+        } */
