--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -180,13 +180,28 @@ canvas {
 
 .ripple {
   position: fixed;
-  width: 10px;
-  height: 10px;
-  background: #90a489;
+  border: 2px solid #32CD32; /* Lime Green */
+  background: transparent;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none;
+  opacity: 1;
+  animation: ripple-effect 0.6s ease-out forwards;
 }
+
+@keyframes ripple-effect {
+  0% {
+      transform: translate(-50%, -50%) scale(0.5);
+      opacity: 1;
+  }
+  100% {
+      transform: translate(-50%, -50%) scale(2);
+      opacity: 0;
+  }
+}
+
+
+
 
 .mic-on {
   background-color: green;
