--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -191,7 +191,7 @@ canvas {
 
 .ripple {
   position: fixed;
-  border: 2px solid #32CD32; /* Lime Green */
+  border: 2px solid rgb(144, 164, 137); 
   background: transparent;
   border-radius: 50%;
   transform: translate(-50%, -50%);
