--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,7 +1,7 @@
 /* General Body Styling */
 body {
   font-family: 'Nunito', sans-serif;
-  background-color: #f0f8ff;
+  background-color: #e0dfc6;
   margin: 0;
   padding: 0;
   height: 100vh;
@@ -14,7 +14,7 @@ body {
 
 /* Full Page Welcome Container */
 .welcome-container {
-  /* background: #ffffff; */
+  
   width: 100%;
   height: 100vh;
   display: flex;
@@ -137,6 +137,11 @@ h1:hover {
 
 #audioVisualizer {
   animation: fadeIn 2s forwards;
+  background-image: url('/static/onboardingBgImage.svg');
+  background-size: 277% 277%; /* Stretches image to fit the full screen */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
 }
 #stopButton {
   /* position: fixed; */
@@ -178,7 +183,7 @@ h1:hover {
   top: 20px; /* Adjust this value as needed */
   left: 50%;
   transform: translateX(-50%);
-  font-size: 40px;
+  font-size: 30px;
   font-weight: bold;
 }
 
@@ -194,7 +199,7 @@ canvas {
   border: 2px solid rgb(144, 164, 137); 
   background: transparent;
   border-radius: 50%;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
   pointer-events: none;
   opacity: 1;
   animation: ripple-effect 0.6s ease-out forwards;
