--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,22 +1,32 @@
 /* General Body Styling */
 body {
   font-family: 'Nunito', sans-serif;
-  background-color: #e0dfc6;
+  /* background-color: #f0f8ff; */
+
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 101vh !important;
   display: flex;
   justify-content: center;
   align-items: end !important;
   /* position: relative; */
   text-align: center;
+  overflow: hidden;
+}
+
+body.bg-audio {
+  background-image: url('/static/onboardingBgImage.svg');
+  background-size: 277% 150%; /* Stretches image to fit the full screen */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
 }
 
 /* Full Page Welcome Container */
 .welcome-container {
-  
+  /* background: #ffffff; */
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -137,11 +147,6 @@ h1:hover {
 
 #audioVisualizer {
   animation: fadeIn 2s forwards;
-  background-image: url('/static/onboardingBgImage.svg');
-  background-size: 277% 277%; /* Stretches image to fit the full screen */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;  
 }
 #stopButton {
   /* position: fixed; */
@@ -199,7 +204,7 @@ canvas {
   border: 2px solid rgb(144, 164, 137); 
   background: transparent;
   border-radius: 50%;
-  /* transform: translate(-50%, -50%); */
+  transform: translate(-50%, -50%);
   pointer-events: none;
   opacity: 1;
   animation: ripple-effect 0.6s ease-out forwards;
@@ -255,6 +260,20 @@ canvas {
   font-size: large;
   float: right;
 }
+
+.soft-circle {
+  width: 45px; /* Adjust size as needed */
+  height: 45px;
+  background: radial-gradient(circle, rgba(144, 164, 137, 0.9), rgba(144, 164, 137, 0.6));
+  border-radius: 50%;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 38%;
+}
+
+
 /* .waves-container {
   position: fixed;
   bottom: 0;
