--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -8,23 +8,31 @@ body {
   height: 101vh !important;
   display: flex;
   justify-content: center;
-  align-items: end !important;
+  align-items: center !important;
   /* position: relative; */
   text-align: center;
   overflow: hidden;
 }
 
-body.bg-audio {
-  background-image: url('/static/onboardingBgImage.svg');
-  background-size: 277% 150%; /* Stretches image to fit the full screen */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;  
+.top-line {
+  position: fixed; /* or absolute */
+  top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  background-color: #a8c9ab;
+  padding: 10px 0; /* Optional: Add some padding */
+  z-index: 1000; /* Ensure it stays on top of other elements */
+  text-decoration: none;
 }
 
+.top-line a {
+  color: white;
+  font-weight: bold;
+  text-decoration: underline;
+}
 /* Full Page Welcome Container */
 .welcome-container {
-  /* background: #ffffff; */
   width: 100%;
   height: 100%;
   display: flex;
@@ -35,11 +43,8 @@ body.bg-audio {
   box-sizing: border-box;
   opacity: 0;
   animation: fadeIn 2s forwards;
-  /* position: absolute; */
-  top: 0;
-  left: 0;
-  text-align: center;
   position: fixed;
+  top: 50px; /* Adjust this value based on the height of the top-line */
 }
 
 /* Fade-in Animation */
