--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -111,7 +111,7 @@ h1:hover {
 
 .custom-select {
   position: relative;
-  width: 200px;
+  width: 60%;
 }
 
 select {
@@ -120,7 +120,7 @@ select {
   padding: 12px 16px;
   font-size: 16px;
   background: white;
-  border-radius: 8px;
+  border-radius: 30px;
   border: 2px solid #90a489;
   cursor: pointer;
   outline: none;
@@ -131,7 +131,7 @@ select {
 .custom-select::after {
   content: "▼"; /* Default arrow */
   position: absolute;
-  top: 50%;
+  top: 65%;
   right: 12px;
   transform: translateY(-50%);
   font-size: 14px;
