change onboarding button and clone voice button

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -516,7 +516,13 @@ canvas {
   margin-left: 38%;
 }
 
-
+.btn-container{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background: linear-gradient(to right, #F8F78A, transparent);
+  border: none;
+}
 /* .waves-container {
   position: fixed;
   bottom: 0;
