--- a/public/css/clone-voice.css
+++ b/public/css/clone-voice.css
@@ -233,7 +233,7 @@ h1 {
 .action-buttons {
     margin-top: 20px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 /* Status and Error */
