--- a/public/css/clone-voice.css
+++ b/public/css/clone-voice.css
@@ -298,11 +298,17 @@ h1 {
     margin-left: 10px;
 }
 
+.download-btn{
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;    
+}
 .player-controls {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
+    /* margin-top: 10px; */
 }
 
 body.fade-out {
